src/lib/cli_parser_leg.c
/* A recursive-descent parser generated by peg 0.1.15 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 21
#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_argument_body(yycontext *yy); /* 21 */
YY_RULE(int) yy_WS(yycontext *yy); /* 20 */
YY_RULE(int) yy_double_quoted(yycontext *yy); /* 19 */
YY_RULE(int) yy_single_quoted(yycontext *yy); /* 18 */
YY_RULE(int) yy_ESC(yycontext *yy); /* 17 */
YY_RULE(int) yy_comment(yycontext *yy); /* 16 */
YY_RULE(int) yy_statement_body(yycontext *yy); /* 15 */
YY_RULE(int) yy_EOL(yycontext *yy); /* 14 */
YY_RULE(int) yy_line_comment(yycontext *yy); /* 13 */
YY_RULE(int) yy_block_comment(yycontext *yy); /* 12 */
YY_RULE(int) yy_HWS(yycontext *yy); /* 11 */
YY_RULE(int) yy_quoted(yycontext *yy); /* 10 */
YY_RULE(int) yy_EOF(yycontext *yy); /* 9 */
YY_RULE(int) yy_line_end(yycontext *yy); /* 8 */
YY_RULE(int) yy_command_body(yycontext *yy); /* 7 */
YY_RULE(int) yy_statement(yycontext *yy); /* 6 */
YY_RULE(int) yy_command(yycontext *yy); /* 5 */
YY_RULE(int) yy__(yycontext *yy); /* 4 */
YY_RULE(int) yy_argument(yycontext *yy); /* 3 */
YY_RULE(int) yy_directive(yycontext *yy); /* 2 */
YY_RULE(int) yy___entry_points(yycontext *yy); /* 1 */

YY_ACTION(void) yy_3_argument_body(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_argument_body\n"));
  {
   capture(yy, yypos, true); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_argument_body(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_argument_body\n"));
  {
   capture(yy, yypos, true); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_argument_body(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_argument_body\n"));
  {
   capture(yy, yypos, true); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_argument(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_argument\n"));
  {
   capture(yy, yypos, false); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_statement(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_statement\n"));
  {
   capture(yy, yypos, false); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_statement(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_statement\n"));
  {
   capture(yy, yypos, true); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_command(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_command\n"));
  {
   capture(yy, yypos, true); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}

YY_RULE(int) yy_argument_body(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "argument_body"));
  {  int yypos2= yy->__pos, yythunkpos2= yy->__thunkpos;  if (!yymatchChar(yy, '\'')) goto l3;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l3;
#undef yytext
#undef yyleng
  }
  l4:;	
  {  int yypos5= yy->__pos, yythunkpos5= yy->__thunkpos;
  {  int yypos6= yy->__pos, yythunkpos6= yy->__thunkpos;  if (!yy_ESC(yy)) goto l7;  goto l6;
  l7:;	  yy->__pos= yypos6; yy->__thunkpos= yythunkpos6;
  {  int yypos8= yy->__pos, yythunkpos8= yy->__thunkpos;  if (!yymatchChar(yy, '\'')) goto l8;  goto l5;
  l8:;	  yy->__pos= yypos8; yy->__thunkpos= yythunkpos8;
  }  if (!yymatchDot(yy)) goto l5;
  }
  l6:;	  goto l4;
  l5:;	  yy->__pos= yypos5; yy->__thunkpos= yythunkpos5;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l3;
#undef yytext
#undef yyleng
  }  if (!yymatchChar(yy, '\'')) goto l3;  yyDo(yy, yy_1_argument_body, yy->__begin, yy->__end);  goto l2;
  l3:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  if (!yymatchChar(yy, '"')) goto l9;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l9;
#undef yytext
#undef yyleng
  }
  l10:;	
  {  int yypos11= yy->__pos, yythunkpos11= yy->__thunkpos;
  {  int yypos12= yy->__pos, yythunkpos12= yy->__thunkpos;  if (!yy_ESC(yy)) goto l13;  goto l12;
  l13:;	  yy->__pos= yypos12; yy->__thunkpos= yythunkpos12;
  {  int yypos14= yy->__pos, yythunkpos14= yy->__thunkpos;  if (!yymatchChar(yy, '"')) goto l14;  goto l11;
  l14:;	  yy->__pos= yypos14; yy->__thunkpos= yythunkpos14;
  }  if (!yymatchDot(yy)) goto l11;
  }
  l12:;	  goto l10;
  l11:;	  yy->__pos= yypos11; yy->__thunkpos= yythunkpos11;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l9;
#undef yytext
#undef yyleng
  }  if (!yymatchChar(yy, '"')) goto l9;  yyDo(yy, yy_2_argument_body, yy->__begin, yy->__end);  goto l2;
  l9:;	  yy->__pos= yypos2; yy->__thunkpos= yythunkpos2;  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_BEGIN)) goto l1;
#undef yytext
#undef yyleng
  }
  {  int yypos17= yy->__pos, yythunkpos17= yy->__thunkpos;  if (!yy_ESC(yy)) goto l18;  goto l17;
  l18:;	  yy->__pos= yypos17; yy->__thunkpos= yythunkpos17;
  {  int yypos19= yy->__pos, yythunkpos19= yy->__thunkpos;
  {  int yypos20= yy->__pos, yythunkpos20= yy->__thunkpos;  if (!yy_WS(yy)) goto l21;  goto l20;
  l21:;	  yy->__pos= yypos20; yy->__thunkpos= yythunkpos20;  if (!yy_EOF(yy)) goto l22;  goto l20;
  l22:;	  yy->__pos= yypos20; yy->__thunkpos= yythunkpos20;  if (!yymatchChar(yy, '\'')) goto l23;  goto l20;
  l23:;	  yy->__pos= yypos20; yy->__thunkpos= yythunkpos20;  if (!yymatchChar(yy, '"')) goto l19;
  }
  l20:;	  goto l1;
  l19:;	  yy->__pos= yypos19; yy->__thunkpos= yythunkpos19;
  }  if (!yymatchDot(yy)) goto l1;
  }
  l17:;	
  l15:;	
  {  int yypos16= yy->__pos, yythunkpos16= yy->__thunkpos;
  {  int yypos24= yy->__pos, yythunkpos24= yy->__thunkpos;  if (!yy_ESC(yy)) goto l25;  goto l24;
  l25:;	  yy->__pos= yypos24; yy->__thunkpos= yythunkpos24;
  {  int yypos26= yy->__pos, yythunkpos26= yy->__thunkpos;
  {  int yypos27= yy->__pos, yythunkpos27= yy->__thunkpos;  if (!yy_WS(yy)) goto l28;  goto l27;
  l28:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yy_EOF(yy)) goto l29;  goto l27;
  l29:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchChar(yy, '\'')) goto l30;  goto l27;
  l30:;	  yy->__pos= yypos27; yy->__thunkpos= yythunkpos27;  if (!yymatchChar(yy, '"')) goto l26;
  }
  l27:;	  goto l16;
  l26:;	  yy->__pos= yypos26; yy->__thunkpos= yythunkpos26;
  }  if (!yymatchDot(yy)) goto l16;
  }
  l24:;	  goto l15;
  l16:;	  yy->__pos= yypos16; yy->__thunkpos= yythunkpos16;
  }  yyText(yy, yy->__begin, yy->__end);  {
#define yytext yy->__text
#define yyleng yy->__textlen
if (!(YY_END)) goto l1;
#undef yytext
#undef yyleng
  }  yyDo(yy, yy_3_argument_body, yy->__begin, yy->__end);
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "argument_body", yy->__buf+yy->__pos));
  return 1;
  l1:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "argument_body", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_WS(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "WS"));
  {  int yypos32= yy->__pos, yythunkpos32= yy->__thunkpos;  if (!yy_HWS(yy)) goto l33;  goto l32;
  l33:;	  yy->__pos= yypos32; yy->__thunkpos= yythunkpos32;  if (!yy_EOL(yy)) goto l31;
  }
  l32:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "WS", yy->__buf+yy->__pos));
  return 1;
  l31:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "WS", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_double_quoted(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "double_quoted"));  if (!yymatchChar(yy, '"')) goto l34;
  l35:;	
  {  int yypos36= yy->__pos, yythunkpos36= yy->__thunkpos;
  {  int yypos37= yy->__pos, yythunkpos37= yy->__thunkpos;  if (!yy_ESC(yy)) goto l38;  goto l37;
  l38:;	  yy->__pos= yypos37; yy->__thunkpos= yythunkpos37;
  {  int yypos39= yy->__pos, yythunkpos39= yy->__thunkpos;  if (!yymatchChar(yy, '"')) goto l39;  goto l36;
  l39:;	  yy->__pos= yypos39; yy->__thunkpos= yythunkpos39;
  }  if (!yymatchDot(yy)) goto l36;
  }
  l37:;	  goto l35;
  l36:;	  yy->__pos= yypos36; yy->__thunkpos= yythunkpos36;
  }  if (!yymatchChar(yy, '"')) goto l34;
  yyprintf((stderr, "  ok   %s @ %s\n", "double_quoted", yy->__buf+yy->__pos));
  return 1;
  l34:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "double_quoted", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_single_quoted(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "single_quoted"));  if (!yymatchChar(yy, '\'')) goto l40;
  l41:;	
  {  int yypos42= yy->__pos, yythunkpos42= yy->__thunkpos;
  {  int yypos43= yy->__pos, yythunkpos43= yy->__thunkpos;  if (!yy_ESC(yy)) goto l44;  goto l43;
  l44:;	  yy->__pos= yypos43; yy->__thunkpos= yythunkpos43;
  {  int yypos45= yy->__pos, yythunkpos45= yy->__thunkpos;  if (!yymatchChar(yy, '\'')) goto l45;  goto l42;
  l45:;	  yy->__pos= yypos45; yy->__thunkpos= yythunkpos45;
  }  if (!yymatchDot(yy)) goto l42;
  }
  l43:;	  goto l41;
  l42:;	  yy->__pos= yypos42; yy->__thunkpos= yythunkpos42;
  }  if (!yymatchChar(yy, '\'')) goto l40;
  yyprintf((stderr, "  ok   %s @ %s\n", "single_quoted", yy->__buf+yy->__pos));
  return 1;
  l40:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "single_quoted", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_ESC(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "ESC"));  if (!yymatchChar(yy, '\\')) goto l46;  if (!yymatchDot(yy)) goto l46;
  yyprintf((stderr, "  ok   %s @ %s\n", "ESC", yy->__buf+yy->__pos));
  return 1;
  l46:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "ESC", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_comment(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "comment"));
  {  int yypos48= yy->__pos, yythunkpos48= yy->__thunkpos;  if (!yy_line_comment(yy)) goto l49;  goto l48;
  l49:;	  yy->__pos= yypos48; yy->__thunkpos= yythunkpos48;  if (!yy_block_comment(yy)) goto l47;
  }
  l48:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", yy->__buf+yy->__pos));
  return 1;
  l47:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_statement_body(yycontext *yy)
{
  yyprintf((stderr, "%s\n", "statement_body"));
  l51:;	
  {  int yypos52= yy->__pos, yythunkpos52= yy->__thunkpos;
  {  int yypos53= yy->__pos, yythunkpos53= yy->__thunkpos;  if (!yy_comment(yy)) goto l54;  goto l53;
  l54:;	  yy->__pos= yypos53; yy->__thunkpos= yythunkpos53;  if (!yy_quoted(yy)) goto l55;  goto l53;
  l55:;	  yy->__pos= yypos53; yy->__thunkpos= yythunkpos53;  if (!yy_ESC(yy)) goto l56;  goto l53;
  l56:;	  yy->__pos= yypos53; yy->__thunkpos= yythunkpos53;
  {  int yypos57= yy->__pos, yythunkpos57= yy->__thunkpos;  if (!yy__(yy)) goto l57;  if (!yymatchChar(yy, ';')) goto l57;  goto l52;
  l57:;	  yy->__pos= yypos57; yy->__thunkpos= yythunkpos57;
  }  if (!yymatchDot(yy)) goto l52;
  }
  l53:;	  goto l51;
  l52:;	  yy->__pos= yypos52; yy->__thunkpos= yythunkpos52;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "statement_body", yy->__buf+yy->__pos));
  return 1;
}
YY_RULE(int) yy_EOL(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "EOL"));
  {  int yypos59= yy->__pos, yythunkpos59= yy->__thunkpos;  if (!yymatchChar(yy, '\n')) goto l60;  goto l59;
  l60:;	  yy->__pos= yypos59; yy->__thunkpos= yythunkpos59;  if (!yymatchString(yy, "\r\n")) goto l61;  goto l59;
  l61:;	  yy->__pos= yypos59; yy->__thunkpos= yythunkpos59;  if (!yymatchChar(yy, '\r')) goto l58;
  }
  l59:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "EOL", yy->__buf+yy->__pos));
  return 1;
  l58:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOL", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_line_comment(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "line_comment"));  if (!yymatchString(yy, "//")) goto l62;
  l63:;	
  {  int yypos64= yy->__pos, yythunkpos64= yy->__thunkpos;
  {  int yypos65= yy->__pos, yythunkpos65= yy->__thunkpos;  if (!yy_EOL(yy)) goto l65;  goto l64;
  l65:;	  yy->__pos= yypos65; yy->__thunkpos= yythunkpos65;
  }  if (!yymatchDot(yy)) goto l64;  goto l63;
  l64:;	  yy->__pos= yypos64; yy->__thunkpos= yythunkpos64;
  }  if (!yy_EOL(yy)) goto l62;
  yyprintf((stderr, "  ok   %s @ %s\n", "line_comment", yy->__buf+yy->__pos));
  return 1;
  l62:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "line_comment", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_block_comment(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "block_comment"));  if (!yymatchString(yy, "/*")) goto l66;
  l67:;	
  {  int yypos68= yy->__pos, yythunkpos68= yy->__thunkpos;
  {  int yypos69= yy->__pos, yythunkpos69= yy->__thunkpos;  if (!yymatchString(yy, "*/")) goto l69;  goto l68;
  l69:;	  yy->__pos= yypos69; yy->__thunkpos= yythunkpos69;
  }  if (!yymatchDot(yy)) goto l68;  goto l67;
  l68:;	  yy->__pos= yypos68; yy->__thunkpos= yythunkpos68;
  }  if (!yymatchString(yy, "*/")) goto l66;
  yyprintf((stderr, "  ok   %s @ %s\n", "block_comment", yy->__buf+yy->__pos));
  return 1;
  l66:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "block_comment", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_HWS(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "HWS"));  if (!yymatchClass(yy, (unsigned char *)"\000\002\000\000\001\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l70;
  yyprintf((stderr, "  ok   %s @ %s\n", "HWS", yy->__buf+yy->__pos));
  return 1;
  l70:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "HWS", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_quoted(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "quoted"));
  {  int yypos72= yy->__pos, yythunkpos72= yy->__thunkpos;  if (!yy_single_quoted(yy)) goto l73;  goto l72;
  l73:;	  yy->__pos= yypos72; yy->__thunkpos= yythunkpos72;  if (!yy_double_quoted(yy)) goto l71;
  }
  l72:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "quoted", yy->__buf+yy->__pos));
  return 1;
  l71:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "quoted", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_EOF(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "EOF"));
  {  int yypos75= yy->__pos, yythunkpos75= yy->__thunkpos;  if (!yymatchDot(yy)) goto l75;  goto l74;
  l75:;	  yy->__pos= yypos75; yy->__thunkpos= yythunkpos75;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "EOF", yy->__buf+yy->__pos));
  return 1;
  l74:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "EOF", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_line_end(yycontext *yy)
{  int yypos0= yy->__pos, yythunkpos0= yy->__thunkpos;
  yyprintf((stderr, "%s\n", "line_end"));
  l77:;	
  {  int yypos78= yy->__pos, yythunkpos78= yy->__thunkpos;
  {  int yypos79= yy->__pos, yythunkpos79= yy->__thunkpos;  if (!yy_HWS(yy)) goto l80;  goto l79;
  l80:;	  yy->__pos= yypos79; yy->__thunkpos= yythunkpos79;  if (!yy_block_comment(yy)) goto l78;
  }
  l79:;	  goto l77;
  l78:;	  yy->__pos= yypos78; yy->__thunkpos= yythunkpos78;
  }
  {  int yypos81= yy->__pos, yythunkpos81= yy->__thunkpos;  if (!yy_line_comment(yy)) goto l82;  goto l81;
  l82:;	  yy->__pos= yypos81; yy->__thunkpos= yythunkpos81;  if (!yy_EOL(yy)) goto l76;
  }
  l81:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "line_end", yy->__buf+yy->__pos));
  return 1;
  l76:;	  yy->__pos= yypos0; yy->__thunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "line_end", yy->__buf+yy->__pos));
  return 0;
}
YY_RULE(int) yy_command_body(yycontext *yy)
